CHANGES
=======

* Create infrastructure for test execution
* Minor corrections and organizer contact
* Document how to install PIP and Tox
* Update how to install Python
* Creating first documentation