@@ -4,4 +4,5 @@ Created on 6 Apr 2016
 @author: Federico Ressi <federico.ressi@intel.com>
 '''
 
-# Write below a line that prints 'Hello world!'
+# Write a line that prints 'Hello world!'
+print('Hello world!')
