@@ -20,7 +20,7 @@ install_command = pip install -r requirements.txt -U {opts} {packages}
 commands =
     coverage erase
     rm -fR .coverage .coverage.*
-    py.test --cov=python_class_2016_01_01 --cov-report term-missing --cov-report html --cov-report xml python_class_2016_01_01
+    py.test -x --cov=python_class_2016_01_01 --cov-report term-missing --cov-report html --cov-report xml python_class_2016_01_01
 
 [testenv:flake8]
 deps =
